<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:backgroundTint="@color/Teal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="32sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:contentDescription="@string/imageAltText"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/obraz" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/likeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/teal"
            android:text="@string/Like" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal"
            android:layout_weight="1"
            android:text="@string/Delete" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal"
            android:layout_weight="1"
            android:text="@string/Save" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView_likeNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/LikeNumber" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/Gray" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/DesriptionHeader" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/Gray"
        android:text="@string/DescriptionContent" />
</LinearLayout>